fix overflow in hero

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -11,7 +11,7 @@
     max-width: 100%;
     }
 
-* {border: 1px solid red;}
+/* {border: 1px solid red;} */
 
 html {
     height: 100%;
@@ -86,9 +86,8 @@ nav .flex-container {
 /* Home Page */
 
 .hero {
-    width: 100vw;
+    width: 100%;
     height: 80vh;
-    padding: 1em;
     flex-direction: column;
     background-color: yellow;
 }
